--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 == ffox-remote: lightweight remote control for Unix Firefox
 
 A running Firefox can be remotely controlled to do things like open new
-URLs; the mechanisms for this are platform dependent. Normal people do
-this by running Firefox again, for example on the command line by going
-'firefox NEW-URL', but it turns out that this has a number of drawbacks
-(including requiring Firefox itself to start up, which is not necessarily
-fast).
+URLs; the mechanisms for this are platform dependent. Normal people
+do this by running Firefox again, for example on the command line by
+running 'firefox NEW-URL', but it turns out that this has a number of
+drawbacks (including requiring Firefox itself to start up, which is not
+necessarily fast).
 
 ffox-remote is a (Go) program that speaks Firefox's remote control
 protocol on Unix/X. More specifically it speaks the newer and more arcane
@@ -15,9 +15,9 @@ which a number of additional tools can use. A program to speak the new
 protocol has become necessary because Mozilla has now removed support
 for the old protocol from Firefox Nightly.
 
-Because the remote control protocol works via X properties, you can
-remote control a running Firefox from a remote machine through things
-like X forwarding. Because it is pure Go code, it can be cross-compiled
+Because the remote control protocol works via X properties, you can remote
+control a running Firefox from a remote machine through things like X
+forwarding. Because ffox-remote is pure Go code, it can be cross-compiled
 for lightweight environments where you don't necessarily want to install
 or build Firefox.
 
